[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robotframework-okw-remote-ssh"
version = "0.1.1"
description = "Standalone Robot Framework library for deterministic remote interaction via SSH."
authors = [{ name = "Zoltán Hrabovszki" }]
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.9"
dependencies = [
  "robotframework>=6.0",
  "paramiko>=3.4.0",
  "PyYAML>=6.0",
  "okw-contract-utils>=0.1.1",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Framework :: Robot Framework",
  "Framework :: Robot Framework :: Library",
  "Topic :: Software Development :: Testing",
]

[project.urls]
Repository = "https://github.com/Hrabovszki1023/robotframework-okw-remote-ssh"
Homepage = "https://github.com/Hrabovszki1023/robotframework-okw-remote-ssh"
Documentation = "https://github.com/Hrabovszki1023/robotframework-okw-remote-ssh/tree/main/docs"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
