[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robotframework-okw-remote-ssh"
version = "0.3.0"
description = "Robot Framework keyword library for deterministic remote command execution and SFTP file transfer via SSH."
authors = [{ name = "Zoltán Hrabovszki" }]
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.9"
keywords = ["robotframework", "testing", "testautomation", "ssh", "sftp", "okw"]
dependencies = [
  "robotframework>=6.0",
  "paramiko>=3.4.0",
  "PyYAML>=6.0",
  "okw-contract-utils>=0.2.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Framework :: Robot Framework",
  "Framework :: Robot Framework :: Library",
  "Topic :: Software Development :: Testing",
  "Topic :: System :: Networking",
]

[project.urls]
Repository = "https://github.com/Hrabovszki1023/robotframework-okw-remote-ssh"
Homepage = "https://github.com/Hrabovszki1023/robotframework-okw-remote-ssh"
Documentation = "https://github.com/Hrabovszki1023/robotframework-okw-remote-ssh/tree/main/docs"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
